# VSCode.UserSnippetGenerator

./: .gitignore  CMakeLists.txt  README.md
src/: CreateUserSnippet.cpp
